--- a/app/index.html
+++ b/app/index.html
@@ -2,23 +2,22 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <title>OpenMDAO dev branch testing</title>
+  <link href="css/app.css", rel="stylesheet">
+  <link href="css/bootstrap.min.css", rel="stylesheet">
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+  <div class="container">
+    <H2 style="text-align: center">OpenMDAO Test Results for the dev Branch</H2>
 
-  <div ng-view></div>
+    <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
+  </div>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/bootstrap/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
